--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="index.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;;">
@@ -42,7 +42,7 @@
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="index.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left;">
@@ -50,7 +50,7 @@
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="index.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="card" style="width: 18rem; float: left; margin-left: 45px; margin-top:50px;">
@@ -58,7 +58,7 @@
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="index.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
       <div class="clear"></div>
