--- a/deskripsi obat.html
+++ b/deskripsi obat.html
@@ -21,7 +21,7 @@
         outline: none;
     }
     #play {
-        background-image: url(./images/mute2.png);
+        background-image: url(./images/unmute2.png);
     }
 </style>
 
