--- a/Eyeroom-login.html
+++ b/Eyeroom-login.html
@@ -76,7 +76,7 @@
     <section id="halaman2">
         <div class="login">
             <h1>Selamat datang!</h1>
-            <img src="./images/pictures2.PNG" width="150px" height="60px"/>
+            <img src="./images/logo eyeroom 2.png" width="150px" height="60px"/>
             <h2>Aplikasi scan obat mata dan data obat kesehatan mata terpercaya!</h2>
         </div>
         <div class="login-img">
