--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="login">
             <span>
                 <img src="./images/logo-eyeroom.png" width="15%"/>
-                <img src="./images/pictures2.PNG" width="28%"/>
+                <img src="./images/logo eyeroom 2.png" width="28%"/>
             </span>
             <hr>
             <h1>Selamat datang!</h1> 
