--- a/menutab.html
+++ b/menutab.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <div class="logo" style="margin-left: 110px;">
-            <img src="./images/logo eyeroom.png"/>
+            <img src="./images/logo eyeroom 2.png"/>
             </div>
             <a href="profile.html"><button type="button" class="btn btn-outline-light position-relative" style="margin-right:110px;">
               Profile
