--- a/search.html
+++ b/search.html
@@ -8,7 +8,6 @@
 
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
 <title>Welcome to EYEROOM</title>
 </head>
 <body style="background-color: #DDFFBC;">
@@ -33,11 +32,51 @@
         <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+          <p class="card-text">Madu herbal racikan yang membantu memulihkan dan mempertajam daya penglihatan.</p>
+          <a href="./deskripsi obat/deskripsi obat vitomata.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem; float: left;;">
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/eyevit.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Eyevit</h5>
+          <p class="card-text">Suplemen dengan kandungan vitamin A untuk memberikan nutrisi dan menjaga kesehatan mata.</p>
+          <a href="./deskripsi obat/deskripsi obat eyevit.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/blackmores.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Blackmores Lutein Vision</h5>
+          <p class="card-text">suplemen yang mengandung lutein dan selenium penghambat proses terjadinya rabun dekat.</p>
+          <a href="./deskripsi obat/deskripsi obat blackmores.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Erlamycetin</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="./deskripsi obat/deskripsi obat erlamycetin.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Cendo Vasacon-A Minidose</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="./deskripsi obat/deskripsi obat cendo.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Biovision Gold</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="./deskripsi obat/deskripsi obat biovision.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
         <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
@@ -53,7 +92,79 @@
           <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem; float: left; margin-left: 45px; margin-top:50px;">
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left; margin-left: 45px;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
+        <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" style="text-align: center;">Vitomata</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="deskripsi obat.html" class="btn btn-primary" style="background: #52734D;">klik untuk deskripsi</a>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem; float: left;">
         <img src="./images/obat 1 vitoma.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title" style="text-align: center;">Vitomata</h5>
