--- a/menutab.html
+++ b/menutab.html
@@ -32,13 +32,15 @@
       <div class="subdesk">
           <p style="text-align:center; margin-bottom:50px;">"MATA yang sehat adalah cerminan dari jiwa yang sehat, karena MATA mempunyai pengaruh yang sangat penting bagi tubuh kita"</p>
       </div>
-      <div class="button-tab">
-      <a href="./Eyeroom-login.html"><button type="button" class="btn btn-outline-success" style=" width:500px; margin-right:120px;">
+    <div class="button-tab">
+    <a href="./Eyeroom-login.html">
+      <button type="button" class="btn btn-outline-success" style="border-radius: 20px; ">
         scan with camera</button></a>
-      <a href="search.html"><button type="button" class="btn btn-outline-success" style="width:500px;">
-        list of eye medicines and vitamins</button></a>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-     </div>
+      <a href="search.html">
+        <button type="button" class="btn btn-outline-success" style="border-radius: 20px; ">
+          list of eye medicines and vitamins</button></a>
+    </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
 </html>
   
