--- a/profile.html
+++ b/profile.html
@@ -10,42 +10,59 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
 <title>Welcome to EYEROOM</title>
+<style>
+  div img{
+    border-radius: 50%;
+  }
+  #foto-pp {
+    margin-top: 100px;
+    text-align: center;
+  }
+  #keterangan {
+    margin-top: 50px;
+    margin-left: 350px;
+    margin-right: 350px;
+    margin-bottom: 50px;
+  }
+</style>
 
 
 </head>
-<body style="background-color: #DDFFBC;">
+<body style="background-color:#DDFFBC;">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
         <a href="menutab.html"><button type="button" class="btn btn-outline-light"style="width:100px; height:40px; margin-left:110px; position: relative;">Back</button></a>
-          <p class="navbar-brand" href="#" style="color: white;">Madu Vitomata</p>
-          <div class="dropdown">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
-              More information
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="https://youtu.be/vLefRuwzliY">Testimoni 1</a></li>
-              <li><a class="dropdown-item" href="https://youtu.be/PBYMNsBnBLQ">Testimoni 2</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li>
-                  <a class="dropdown-item" href="https://klinikmataminus.com/chat/pesan-paket-silver/"><img src="https://t3.ftcdn.net/jpg/02/96/91/42/240_F_296914204_8F0EmCJh8nVo7c0MYJtwUdEqnG1xs6Bq.jpg"/><h9> with browser</h9></a></li>
-              <li>
-                  <a class="dropdown-item" href="#"><img src="https://t3.ftcdn.net/jpg/03/03/05/78/240_F_303057896_UOqpWEaLAEwRVFlh5OUq0RIB3EfHNnAi.jpg"/> with shopee</a></li>
-            </ul>
-          </li>
+          <p class="navbar-brand" href="#" style="color: white;">Profile</p>
+          <img src="./images/logo eyeroom 2.png" style="margin-right: 110px">
         </ul>
        </div>
         </div>
       </nav>
+      <div id="foto-pp">
+        <img src="images/mute2.png" width="15%"/>
+      </div>
+      <div id="keterangan">
+        <span>
+        <ul class="name">
+          <li><img src="images/user.png"/></li>
+        <li><h6 class="card-subtitle mb-2 text-muted">Name</h6>
+        <h4 class="card-title">Eye Room</h4>
+        </li>
+        </ul>
+        </span>
+        <hr>
+        <h6 class="card-subtitle mb-2 text-muted">Status</h6>
+        <h4 class="card-title">Pelajar</h4>
+        <hr>
+        <h6 class="card-subtitle mb-2 text-muted">Email</h6>
+        <h4 class="card-title">eyeroom@gmail.com</h4>
+      </div>
 
-
-    <div class="container" style="width:400px;">
+    <!--<div class="container" style="width:400px;">
         <div class="spinner-border text-primary" role="status">
             <span class="visually-hidden">Loading...</span>
-          </div>
- 
-      </div>
+        </div>
+      </div>-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
